codepkg/objects/Item_Master__c.object
<CustomObject>
    <fields>
        <fullName>Bleaching_Dry_Cleaning_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bleaching / Dry-Cleaning Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Icon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_Instruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care Instruction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Of Origin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drying_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drying Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drying_Modifiers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drying Modifiers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excare_Instruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excare Instruction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fabric_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fabric Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ironing_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ironing Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Name</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Item_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Testing For NEXT Program</description>
        <label>Item Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labelling_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labelling Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lot Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retailer Care Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packaging_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaging Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RN_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RN Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retailer_Code__c.Online_Enquiry__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>CareLabelConfigurators</relationshipLabel>
        <relationshipName>Item_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Season_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Season Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Season_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Season Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Size Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Style_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Style Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wash_Instruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash Instruction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wash_Modifiers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash Modifiers</label>
        <type>Checkbox</type>
    </fields>
    <label>CareLabelConfigurator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Retailer__c</columns>
        <columns>Brand_Icon__c</columns>
        <columns>Size_Chart__c</columns>
        <columns>Country_Of_Origin__c</columns>
        <columns>Fabric_Component__c</columns>
        <columns>Wash_Instruction__c</columns>
        <columns>Wash_Modifiers__c</columns>
        <columns>Drying_Instructions__c</columns>
        <columns>Drying_Modifiers__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CareLabelConfigurators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>